# boliye

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  tech-req.md
.github/workflows/: ci.yml
agents/: __init__.py  assessor_agent.py  base.py  content_agent.py  orchestrator.py  scheduler_agent.py  tutor_agent.py
backend/: __init__.py  config.py  database.py  llm_client.py  main.py
backend/api/: __init__.py  schemas.py  session_router.py  stats_router.py
backend/models/: __init__.py  base.py  card.py  content_item.py  exercise.py  learner.py  review_log.py
backend/srs/: __init__.py  assessment.py  exercise_selector.py  fsrs.py  queue.py  session.py
hindi_srs/: __init__.py  __main__.py  devanagari_renderer.py
ingestion/: __init__.py  cefr.py  constants.py  dedup.py  exercise_generator.py  extractor.py  familiarity.py  file_handlers.py  gap_analysis.py  pipeline.py  topics.py  utils.py
migrations/: env.py
migrations/versions/: __init__.py
scripts/: extract_vocab.py  generate_output.py  ingest.py  load_to_db.py
tests/: test_agents.py  test_cli.py  test_devanagari_renderer.py  test_health.py  test_ingestion.py  test_srs.py
