[project]
name = "hindi-srs"
version = "0.1.0"
description = "Spaced repetition language learning system for Hindi, powered by LLM-generated exercises"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "anthropic>=0.42.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "aiosqlite>=0.20.0",
    "Pillow>=10.0.0",
    "greenlet>=3.3.1",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.11.0",
]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.28.0",
    "pre-commit>=4.0.0",
    "pdfplumber>=0.11.0",
    "fpdf2>=2.8.0",
    "bandit>=1.7.0",
]

[project.scripts]
hindi-srs = "hindi_srs.__main__:main"
hindi-srs-ingest = "scripts.ingest:main"
hindi-srs-load = "scripts.load_to_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "D",    # pydocstyle (docstrings)
    "C90",  # mccabe complexity
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501", "RUF059"]  # Tests: relaxed rules
"scripts/*" = ["D", "RUF001", "RUF003", "RUF005", "E501", "F841", "B007", "C901", "PTH123"]  # Scripts: relaxed rules
"migrations/*" = ["D"]  # Alembic auto-generated files
"backend/api/*_router.py" = ["B008"]  # FastAPI Depends() pattern
"hindi_srs/__main__.py" = ["C901"]  # CLI complexity acceptable
"ingestion/pipeline.py" = ["C901"]  # Pipeline orchestration complexity acceptable

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false  # Allow Any returns for now
warn_unused_configs = true
# Relaxations for gradual typing
disallow_any_generics = false  # Allow unparameterized generics like dict, list
ignore_missing_imports = true  # Allow missing stubs for third-party libraries

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
# Relaxed type checking for tests and scripts
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B311"]  # B101: allow asserts, B311: random for non-security use is fine
